<resources>
    <string name="app_name">Foodcraft</string>

    <string name="generic_error">Error. Try again later</string>

    <!--INTRO-->
    <string name="intro_text">Find the perfect ingredients for\nyour dishes!\nCook healthy and delicious meals!</string>
    <string name="intro_start">Start</string>

    <!--HOME-->
    <string name="home_manage_ingredients">Manage ingredients</string>
    <string name="home_recipe_generator">Generate recipe</string>
    <string name="home_import_ingredients">Import ingredients</string>

    <!--RECIPE-->
    <string name="recipe_generate_title">Generate new recipe</string>
    <string name="recipe_generate_max_number_ingredients">Max number of ingredients:</string>
    <string name="recipe_generate_min_number_ingredients">Min number of ingredients:</string>
    <string name="recipe_generate_minimum_health_score">Minimum health score</string>
    <string name="recipe_generate_minimum_taste_score">Minimum taste score</string>
    <string name="recipe_generate_with_tags">With tags</string>
    <string name="recipe_generate_button_title">Generate</string>

    <!--INGREDIENTS-->
    <string name="ingredient_title">New Ingredient</string>
    <string name="ingredient_name">Name</string>
    <string name="ingredient_add_button">Add</string>
    <string name="ingredient_health_scale">Health Scale</string>
    <string name="ingredient_taste_scale">Taste Scale</string>
    <string name="ingredient_tags">Tags</string>
    <string name="ingredient_new_tag">New tag</string>

    <!--TAGS-->
    <string name="tag_new_tag">New tag</string>
    <string name="tag_name">Name</string>
    <string name="tag_color">Color</string>
    <string name="tag_add">Add</string>

    <!--RECIPE-->
    <string name="recipe_select_max_num_ingredients_title">Maximum number of ingredients</string>
    <string name="recipe_select_max_num_ingredients_text">Select a value</string>
    <string name="recipe_generate_error">Could not generate a recipe with given parameters</string>

</resources>
