<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:minWidth="@dimen/dialog_width"
    android:orientation="vertical"
    android:paddingBottom="@dimen/large_margin"
    android:paddingEnd="@dimen/large_margin"
    android:paddingStart="@dimen/large_margin"
    android:paddingTop="@dimen/large_margin">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/medium_spacing"
        android:text="@string/tag_new_tag"
        style="@style/Header1"/>

    <EditText
        android:id="@+id/tag_name_input"
        style="@style/MainInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/tag_name"
        android:layout_marginBottom="@dimen/large_spacing"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/small_spacing"
        android:text="@string/tag_color"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tag_color_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/medium_spacing"
        app:singleLine="true"
        app:singleSelection="true"/>

    <Button
        android:id="@+id/tad_add_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        android:text="@string/tag_add"/>

</LinearLayout>