<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:src="@drawable/intro_image"/>

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                 android:paddingStart="@dimen/margin_xxlarge"
                 android:paddingEnd="@dimen/margin_xxlarge"
                 android:paddingTop="@dimen/margin_xxxlarge"
                 android:paddingBottom="@dimen/margin_xxxlarge">


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:textColor="@color/white"
                  android:fontFamily="@font/noteworthy"
                  android:layout_marginTop="@dimen/margin_large"
                  android:gravity="center"
                  android:textSize="59sp"
                  android:text="@string/app_name"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/margin_xlarge"
                  android:textColor="@android:color/white"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:fontFamily="@font/noteworthy"
                  android:textSize="24sp"
                  android:text="@string/intro_text"/>

        <Button android:id="@+id/intro_start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:padding="@dimen/margin_large"
                android:textSize="@dimen/font_xlarge"
                android:background="@drawable/main_button_background"
                android:text="@string/intro_start"/>
    </FrameLayout>

</FrameLayout>